# rust-sha256sum

./: Cargo.toml  LICENSE
src/: main.rs
