[package]
name = "rust-sha256sum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.8", features = ["derive", "unicode"] }
generic-array = "0.14.6"
sha2 = "0.10.6"
hex = "0.4.3"
